style.css
/*
This CSS resource incorporates links to font software which is the valuable copyrighted
property of Monotype Imaging and/or its suppliers. You may not attempt to copy, install,
redistribute, convert, modify or reverse engineer this font software. Please contact Monotype
Imaging with any questions regarding Web Fonts:  http://www.fonts.com
*/
@import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=47d1aae6-7069-43d2-a74c-d770398a9fd1");
@font-face{
		font-family:"AvenirNextLTW01-Regular";
		src:url("Fonts/e9167238-3b3f-4813-a04a-a384394eed42.eot?#iefix");
		src:url("Fonts/e9167238-3b3f-4813-a04a-a384394eed42.eot?#iefix") format("eot"),url("Fonts/2cd55546-ec00-4af9-aeca-4a3cd186da53.woff2") format("woff2"),url("Fonts/1e9892c0-6927-4412-9874-1b82801ba47a.woff") format("woff"),url("Fonts/46cf1067-688d-4aab-b0f7-bd942af6efd8.ttf") format("truetype"),url("Fonts/52a192b1-bea5-4b48-879f-107f009b666f.svg#52a192b1-bea5-4b48-879f-107f009b666f") format("svg");
}
@font-face{
		font-family:"AvenirNextLTW01-Italic";
		src:url("Fonts/d1fddef1-d940-4904-8f6c-17e809462301.eot?#iefix");
		src:url("Fonts/d1fddef1-d940-4904-8f6c-17e809462301.eot?#iefix") format("eot"),url("Fonts/7377dbe6-f11a-4a05-b33c-bc8ce1f60f84.woff2") format("woff2"),url("Fonts/92b66dbd-4201-4ac2-a605-4d4ffc8705cc.woff") format("woff"),url("Fonts/18839597-afa8-4f0b-9abb-4a30262d0da8.ttf") format("truetype"),url("Fonts/1de7e6f4-9d4d-47e7-ab23-7d5cf10ab585.svg#1de7e6f4-9d4d-47e7-ab23-7d5cf10ab585") format("svg");
}
@font-face{
		font-family:"Avenir Next LT W01 Bold";
		src:url("Fonts/dccb10af-07a2-404c-bfc7-7750e2716bc1.eot?#iefix");
		src:url("Fonts/dccb10af-07a2-404c-bfc7-7750e2716bc1.eot?#iefix") format("eot"),url("Fonts/14c73713-e4df-4dba-933b-057feeac8dd1.woff2") format("woff2"),url("Fonts/b8e906a1-f5e8-4bf1-8e80-82c646ca4d5f.woff") format("woff"),url("Fonts/890bd988-5306-43ff-bd4b-922bc5ebdeb4.ttf") format("truetype"),url("Fonts/ed104d8c-7f39-4e8b-90a9-4076be06b857.svg#ed104d8c-7f39-4e8b-90a9-4076be06b857") format("svg");
}
@font-face{
		font-family:"AvenirNextLTW01-BoldIta";
		src:url("Fonts/ac2d4349-4327-448f-9887-083a6a227a52.eot?#iefix");
		src:url("Fonts/ac2d4349-4327-448f-9887-083a6a227a52.eot?#iefix") format("eot"),url("Fonts/eaafcb26-9296-4a57-83e4-4243abc03db7.woff2") format("woff2"),url("Fonts/25e83bf5-47e3-4da7-98b1-755efffb0089.woff") format("woff"),url("Fonts/4112ec87-6ded-438b-83cf-aaff98f7e987.ttf") format("truetype"),url("Fonts/ab1835cb-df6f-4d8d-b8ee-3075f5ba758d.svg#ab1835cb-df6f-4d8d-b8ee-3075f5ba758d") format("svg");
}
@font-face{
	font-family:"ITC Souvenir W01 Medium";
	src:url("Fonts/407181a3-a568-4379-a1cf-bb60661f0f70.woff2") format("woff2"),url("Fonts/9236ffb0-c485-4f91-99ef-e969f3836d89.woff") format("woff");
}

/* .orange {
	background-color: #f6bb00;
	color: #fff;
}
.red {
	background-color: #f26633;
	color: #fff;
}
.purple {
	background-color: #ccbbdd;
	color: #fff;
}
.yellow {
	background-color: #F3EE08;
	color: #fff;
}
.blue {
	background-color: #6e99ba;
	color: #fff;
}
.lightgreen {
	background-color: #C5DDD7;
	color: #fff;
}
.orange, .red, .purple, .yellow, .blue, .lightgreen {
	margin-left: -20px !important;
	padding-left: 20px !important;
	padding-top: 3px;
	padding-bottom: 3px;
} */

:root {
	--yellow-fg: #aa6622;
	--blue-fg: #004488;
	--purple-fg: #550055;
	--green-fg: #336655;
}

html {
	margin: 0;
}
html * {
	padding: 0;
	margin: 0;
}
body {
	/* background-color: #eee; */
	/* background-color: hsl(10, 30%, 85%); */
	padding: 0 20px;
	margin: 0;
	font-family: "Times New Roman", "Serif";
	font-family: "AvenirNextLTW01-Regular", sans-serif;
	font-size: 18px;
	text-align: center;
	padding-bottom: 50px;
	color: rgba(0, 0, 0, 0.7);
}

body.pink {
	background-color: hsl(10, 30%, 80%);
}

body.blue {
	background-color: hsl(200, 30%, 80%);
}

body.yellow {
	background-color: hsl(40, 90%, 80%);
}

body.green {
	background-color: hsl(150, 20%, 75%);
}

body.purple {
	background-color: hsl(240, 20%, 80%);
}

html.de .en {
	display: none;
}
html.de .de {
	display: block;
}
html.en .en {
	display: block;
}
html.en .de {
	display: none;
}
.language-switch {
	position: absolute;
	top: 10px;
	right: 10px;
}
.language-switch p.en, .language-switch p.de, .language-switch p a, .language-switch p span {
	display: inline-block;
	padding: 0;
	margin: 0
}
.language-switch p.en span, .language-switch p.de a {
	display: none;
}
html.en .language-switch .en span, html.en .language-switch p.de a {
	display: inline-block;
}
html.en .language-switch .de span, html.en .language-switch p.en a {
	display: none;
}
html.de .language-switch .en a, html.de .language-switch .de span {
	display: inline-block;
}
html.de .language-switch .de a, html.de .language-switch .en span {
	display: none;
}

h1, h2, h3, h4 {
	font-family: "ITC Souvenir W01 Medium";
	/* font-family: "Syne"; */
	font-weight: normal;
	opacity: 0.7;
}
h4 {
	font-family: "Avenir Next LT W01 Bold";
	/* font-family: "Syne"; */
	font-weight: normal;
}
h1 {
	color: #fff;
	font-size: 24pt;
	text-align: left;
	margin: 20 0 10 0;
}
h2 {
	margin-bottom: 20px;
}
h3 {
	font-size: 1.5em;
	text-align: left;
	margin-top: 20px;
	/*font-weight: normal;*/
	/* font-style: italic; */
	line-height: 1.5em;
	margin: 0 0 0.5rem;
	border-bottom: 1px solid;
	/* font-family:"AvenirNextLTW01-Regular"; */
	/* color: #fff; */
}
div + h3 {
	margin-top: 30px;
}
h4 {
	font-size: 1.2em;
	text-align: left;
	padding: 1em 0 0;
	margin: 0;
	/*font-weight: normal;*/
	/*font-style: italic;*/
}
a:link, a:visited, a:active {
	color: #992200;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

.blue a:link, .blue a:visited, .blue a:active {
	color: var(--blue-fg);
}

.yellow a:link, .yellow a:visited, .yellow a:active {
	color: var(--yellow-fg);
}

.purple a:link, .purple a:visited, .purple a:active {
	color: var(--purple-fg);
}

.green a:link, .green a:visited, .green a:active {
	color: var(--green-fg);
}

p {
	margin: 0 0 1em;
	/* font-family: "ITC Souvenir W01 Light"; */
	line-height: 1.8rem;
	hyphens: auto;
}
ul {
	margin: 0 0 0.5rem 1rem;
}
li {
	line-height: 1.8rem;
}
ul.menu {
	margin-bottom: 0px;
	margin-left: 0px;
}
ul.menu li {
	margin-bottom: 10px;
	/* font-family: "ITC Souvenir W01 Light"; */
	text-transform: uppercase;
}
section {
	margin-bottom: 40px;
}
article {
	margin: -20px;
	padding: 20px 20px 10px;
}
/* article:hover {
	background-color: hsla(240, 80%, 40%, 0.5);
	color: white;
	border-radius: 50px;
}
article:hover a {
	color: white !important;
	text-decoration: underline;
} */
#main {
	max-width: 1000px;
	margin: 0px auto;
	line-height: 1.4em;
	padding: 0;
	clear: both;
	text-align: left;
}
#head, #name, #mainmenu {
	color: #333;
}
#name a:link, #name a:visited, #name a:active, #name a:hover {
	color: #fff;
	text-decoration: none;
}
#head {
	/* border-bottom: 4px solid #C5DDD7; */
	padding: 20px 0;
}
#head h1 {
	color: #fff; 
	padding: 0;
	font-weight: normal;
	font-size: 4em;
	line-height: 1em	;
}
#mainmenu {
	padding: 10px 0 0;
	text-align: left;
	/* margin: 0 auto; */
}
#mainmenu ul {
	list-style: none;
	padding: 0;
}
#mainmenu ul li {
	display: inline-block;
	padding: 0 30px 0 0;
	font-weight: bold;
}
#mainmenu ul li a {
	color: #333;
}
#mainmenu ul li.selected {
	/* background-color: #C5DDD7;
	color: #85bdb7; */
	font-family: "Avenir Next LT W01 Bold";
	color: white;
}
/* .box h3 {
	line-height: inherit;
} */
div.bookcontainer {
	margin-top: 30px;
	overflow: hidden;
	width: 100%;
}
.bookcontainer h4 {
	margin-top: 0px;
	padding-top: 0px;
}
.intro {
	margin-top: 0px;
	padding-top: 0px;
}
div.bookimage {
	width: 200px;
	max-width: 200px;
	text-align: right;
}

div.bookimage img {
	width: 200px;
	max-width: 200px;
}

#cv_left {
	display: block;
	margin-top: 20px;
	float: left;
	margin-bottom: 10px;
}
#cv_right {
	display: block;
	margin-top: 20px;
	float: left;
	text-align: left;
	padding-right: 20px;
}
.details {
	border-left: 4px solid #C5DDD7;
	padding: 10px;
	color: rgb(102, 102, 102);
	display: none;
	background-color: #F9FDFA;
}
.yellow .details {
	border-left-color: var(--yellow-fg);
}
br {
	clear: left;
}

section img {
	width: 50%;
	max-height: 400px;
}

.box {
	margin: 20px 0 0;
}

@media screen and (min-width: 1000px) {
	.homepage {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
	}
	.box {
		width: 470px;
		padding: 0 25px 5px 0;
	}
	.schwerpunkte {
		columns: 2;
	} 
	section {
		width: calc(50% - 40px);
		float: left;
	}

	section:nth-of-type(2n+1) {
		margin-right: 40px;
		clear: left;
	}

	.bookimage {
		float: left;
	}
	.bookdescription {
		width: 770px;
		float: right;
	}
	#cv-right {
		width: 520px;
	}
	#cv_left {
		width: 170px;
	}	
}

